--- a/style.css
+++ b/style.css
@@ -1,456 +1,260 @@
-@import url(https://fonts.googleapis.com/css?family=Inter:100,200,300,regular,500,600,700,800,900);
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
 
-::-webkit-scrollbar {
-    width: 0;
-}
-
-* {
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
 
-body {
-    min-height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #2e2e2e;
-    font-family: "Inter", sans-serif;
-    background-color: #fff;
-}
-
-.wrapper {
-    position: relative;
+body{
+    width: 100%;
     height: 100vh;
-    width: 100%;
     overflow: hidden;
-    padding: 30px 0;
-    display: flex;
+    background: #1e293b;
 }
 
-@media (min-width:768px) {
-    .wrapper {
-        height: 50rem;
-        width: 25rem;
-        border-radius: 40px;
-        border: 10px solid #2e2e2e;
-    }
+::selection{
+    color: #fff;
+    background: #1e293b;
 }
 
-.wrapper .screen {
-    min-width: 100%;
-    flex: 1;
-    transition: all 0.3s;
-}
-
-.screen-backdrop {
-    width: 135%;
-    height: 25rem;
-    position: absolute;
-    top: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    border-radius: 0 0 50% 50%;
-    background-color: #39a6f0;
-    z-index: -1;
-    transition: all 0.3s;
-}
-
-.wrapper.show-category .home-screen {
-    transform: translateX(-100%);
-}
-
-.wrapper.show-category .category-screen {
-    transform: translateX(-100%);
-}
-
-.wrapper.show-category .screen-backdrop {
-    transform: translate(-50%, -60%)
-}
-
-.head-wrapper {
-    padding: 0 30px;
-}
-
-.menu-btn {
-    width: 2rem;
-    cursor: pointer;
-    color: #ffffff;
-}
-
-.welcome {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 20px;
-    color: #ffffff;
-}
-
-.welcome h1 {
-    font-size: 1.5rem;
-}
-
-.welcome p {
-    font-weight: 500;
-}
-
-.welcome .img {
-    position: relative;
-}
-
-.welcome .img .backdrop {
-    position: absolute;
-    top: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 3.8rem;
-    height: 4rem;
-    border-radius: 50%;
-    background-color: #e5e7fd;
-    z-index: -1;
-}
-
-.welcome .img img {
-    width: 5rem;
-}
-
-.categories-wrapper {
-    margin-top: 1rem;
-    padding: 0 30px;
-    height: calc(100% - 8rem);
-    padding-bottom: 20px;
-    overflow: auto;
-}
-
-.categories {
-    padding-top: 1rem;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-}
-
-.category {
+.wrapper{
+    max-width: 405px;
     background: #fff;
-    border-radius: 0.5rem;
-    padding: 1.5rem 1rem;
-    cursor: pointer;
-    display: flex;
-    justify-content: space-between;
-    box-shadow: 0 10px 20px 5px #00000023;
-    transition: all 0.3s;
-
+    margin: 137px auto;
+    padding: 28px 0 30px;
+    border-radius: 7px;
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
 }
 
-.category:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 10px 20px 5px #00000040;
-}
-
-.category .left {
-    display: flex;
-    gap: 1.5rem;
-    align-items: center;
-}
-
-.category .left img {
-    width: 3rem;
-}
-
-.category .content h1 {
-    font-size: 1.5rem;
-}
-
-.category .content p {
-    color: #2e2e2e;
-    font-size: 0.8rem;
-    opacity: 0.6;
-}
-
-.category .options {
-    opacity: 0;
-    visibility: hidden;
-    transition: all 0.3s;
-}
-
-.category:hover .options {
-    opacity: 1;
-    visibility: visible;
-}
-
-.category .toggle-btn {
-    width: 2rem;
-    cursor: pointer;
-    opacity: 0.6;
-}
-
-.category .toggle-btn:hover {
-    opacity: 1;
-}
-
-
-/* Category Screen */
-.category-screen .head-wrapper {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.category-screen .head-wrapper svg {
-    width: 2rem;
-    cursor: pointer;
-    color: #fff;
-}
-
-.category-details {
-    padding: 0 30px;
-    margin-top: 7rem;
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-}
-
-.category-details img {
-    width: 4rem;
-}
-
-.category-details .details p {
-    opacity: 0.6;
-}
-
-/* tasks */
-.tasks-wrapper {
-    padding: 0 30px;
-    margin-top: 1rem;
-    height: calc(100% - 12rem);
-    padding-bottom: 20px;
-    overflow: auto;
-}
-
-.tasks {
-    padding-top: 1rem;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-}
-
-.task-wrapper {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-
-
-.task {
-    display: flex;
-    gap: 0.5rem;
-    align-items: center;
-    font-size: 0.8rem;
-    font-weight: 500;
-    width: max-content;
-    cursor: pointer;
-}
-
-
-.task input {
-    display: none;
-}
-
-.task .checkmark {
-    width: 1rem;
-    height: 1rem;
-    border-radius: 2px;
-    border: 1px solid #2e2e2e;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.task .checkmark svg {
-    width: 1rem;
-    color: #2e2e2e;
-    opacity: 0;
-    transition: all 0.3s;
-}
-
-.task:hover .checkmark svg {
-    opacity: 1;
-}
-
-.task .checkmark svg path {
-    stroke-width: 3;
-}
-
-.task input:checked~.checkmark {
-    background-color: #2e2e2e;
-}
-
-.task input:checked~.checkmark svg {
-    opacity: 1;
-    color: #fff;
-}
-
-.task input:checked~p {
-    text-decoration: line-through;
-    opacity: 0.6;
-}
-
-.task-wrapper .delete {
-    min-width: 2rem;
-    height: 2rem;
-    padding: 0.5rem;
-    border-radius: 50%;
-    color: #2e2e2e;
-    cursor: pointer;
-    background-color: rgba(0, 0, 0, 0.031);
-    opacity: 0;
-    visibility: hidden;
-    transition: all 0.3s;
-}
-
-.task-wrapper:hover .delete {
-    opacity: 1;
-    visibility: visible;
-}
-
-.task-wrapper .delete:hover {
-    color: red;
-    background-color: rgba(0, 0, 0, 0.1);
-}
-
-.no-tasks {
-    margin-top: 5rem;
-    text-align: center;
-    font-size: 1.5rem;
-    opacity: 0.6;
-}
-
-/* Add Task */
-.add-task-btn {
-    position: absolute;
-    bottom: 1rem;
-    right: 1rem;
-    width: 3rem;
-    height: 3rem;
-    border-radius: 50%;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #39a6f0;
-    transition: all 0.3s;
-}
-
-.add-task-btn:hover {
-    transform: scale(1.1);
-}
-
-.add-task-btn.active {
-    z-index: 1;
-    bottom: 20rem;
-    transform: rotate(45deg);
-}
-
-.add-task-btn svg {
-    width: 2rem;
-    color: #fff;
-}
-
-.add-task {
-    position: absolute;
-    bottom: -100%;
-    left: 0;
-    width: 100%;
-    padding: 20px 30px;
-    transition: all 0.3s;
-}
-
-.add-task.active {
-    bottom: 0;
-}
-
-.add-task .heading {
-    font-size: 1.5rem;
-    margin-bottom: 1rem;
-}
-
-.input-group {
+.task-input{
+    height: 52px;
+    padding: 0 25px;
     position: relative;
-    margin-bottom: 20px;
 }
 
-.input-group input,
-.input-group label {
-    display: block;
-    width: 100%;
-}
-
-.input-group input,
-.input-group select {
-    width: 100%;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    padding: 10px;
-    font-size: 16px;
-}
-
-.input-group label {
-    width: max-content;
-    padding: 0 5px;
-    margin-top: 5px;
-    font-size: 14px;
-    color: #666;
-    margin-bottom: 5px;
-}
-
-.btns {
-    display: flex;
-    gap: 1rem;
-    justify-content: flex-end;
-    align-items: center;
-}
-
-.btns button {
-    padding: 10px 20px;
-    border-radius: 5px;
-    border: none;
-    cursor: pointer;
-    font-size: 14px;
-    font-weight: 600;
-    transition: all 0.3s;
-    z-index: 1;
-}
-
-button.add-btn {
-    background-color: #39a6f0;
-    color: #fff
-}
-
-.add-task-backdrop {
+.task-input img{
+    top: 50%;
     position: absolute;
-    bottom: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 135%;
-    height: 20rem;
-    border-radius: 50% 50% 0 0;
-    background-color: #fff;
+    transform: translate(17px, -50%);
 }
 
-.black-backdrop {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
+.task-input input{
     height: 100%;
-    backdrop-filter: blur(5px);
-    background-color: #00000023;
-    opacity: 0;
-    visibility: hidden;
-    transition: all 0.3s;
+    width: 100%;
+    outline: none;
+    font-size: 18px;
+    border-radius: 5px;
+    padding: 0 20px 0 53px;
+    border: 1px solid #999;
 }
 
-.black-backdrop.active {
-    opacity: 1;
-    visibility: visible;
+.task-input input:focus, .task-input input.active{
+    padding-left: 52px;
+    border: 2px solid #1e293b;
+}
+
+.task-input input::placeholder{
+    color: #bfbfbf;
+}
+
+.controls, li{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.controls{
+    padding: 18px 25px;
+    border-bottom: 1px solid #ccc;
+}
+
+.filters span{
+    margin: 0 8px;
+    font-size: 17px;
+    color: #444;
+    cursor: pointer;
+}
+
+.filters span:first-child{
+    margin-left: 0;
+}
+
+.filters span.active{
+    color: #1e293b;
+}
+
+.controls .clear-btn{
+    border: none;
+    opacity: 0.6;
+    outline: none;
+    color: #fff;
+    cursor: pointer;
+    font-size: 13px;
+    padding: 7px 13px;
+    border-radius: 4px;
+    background: #1e293b;
+    letter-spacing: 0.3px;
+    pointer-events: none;
+    transition: transform 0.25s ease;
+}
+
+.clear-btn.active{
+    opacity: 0.9;
+    pointer-events: auto;
+}
+
+.clear-btn:active{
+    transform: scale(0.93);
+}
+
+.task-box{
+    margin-top: 20px;
+    margin-right: 5px;
+    padding: 0 20px 10px 25px;
+}
+
+.task-box.overflow{
+    overflow-y: auto;
+    max-height: 300px;
+}
+
+.task-box::-webkit-scrollbar{
+    width: 5px;
+}
+
+.task-box::-webkit-scrollbar-track{
+    background: #f1f1f1;
+    border-radius: 25px;
+}
+
+.task-box::-webkit-scrollbar-thumb{
+    background: #e6e6e6;
+    border-radius: 25px;
+}
+
+.task-box .task{
+    list-style: none;
+    font-size: 17px;
+    margin-bottom: 18px;
+    padding-bottom: 16px;
+    align-items: flex-start;
+    border-bottom: 1px solid #ccc;
+}
+
+.task-box .task:last-child{
+    margin-bottom: 0;
+    border-bottom: 0;
+    padding-bottom: 0;
+}
+
+.task-box .task label{
+    display: flex;
+    align-items: flex-start;
+}
+
+.task-box label input{
+    margin-top: 7px;
+    accent-color: #1e293b;
+}
+
+.task-box label p{
+    user-select: none;
+    margin-left: 12px;
+    word-wrap: break-word;
+}
+
+.task label p.checked{
+    text-decoration: line-through;
+}
+
+.task-box .settings{
+    position: relative;
+}
+
+.settings :where(i, li){
+    cursor: pointer;
+}
+
+.settings .task-menu{
+    z-index: 10;
+    right: -5px;
+    bottom: -65px;
+    padding: 5px 0;
+    background: #fff;
+    position: absolute;
+    border-radius: 4px;
+    transform: scale(0);
+    transform-origin: top right;
+    box-shadow: 0 0 6px rgba(0, 0, 0, 0.15);
+    transition: transform 0.2s ease;
+}
+
+.task-box .task:last-child .task-menu{
+    bottom: 0;
+    transform-origin: bottom right;
+}
+
+.task-box .task:first-child .task-menu{
+    bottom: -65px;
+    transform-origin: top right;
+}
+
+.task-menu.show{
+    transform: scale(1);
+}
+
+.task-menu li{
+    height: 25px;
+    font-size: 16px;
+    margin-bottom: 2px;
+    padding: 17px 15px;
+    cursor: pointer;
+    justify-content: flex-start;
+}
+
+.task-menu li:last-child{
+    margin-bottom: 0;
+}
+
+.settings li:hover{
+    background: #f5f5f5;
+}
+
+.settings li i{
+    padding-right: 8px;
+}
+
+@media (max-width: 400px){
+    body{
+        padding: 0 10px;
+    }
+
+    .wrapper{
+        padding: 20px 0;
+    }
+
+    .filters span{
+        margin: 0 5px;
+    }
+
+    .task-input{
+        padding: 0 20px;
+    }
+
+    .controls{
+        padding: 18px 20px;
+    }
+
+    .task-box{
+        margin-top: 20px;
+        margin-right: 5px;
+        padding: 0 15px 10px 20px;
+    }
+
+    .task label input{
+        margin-top: 4px;
+    }
+
 }
